--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Decobrindo seu perfil</title>
+    <title>Descobrindo seu perfil</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
